# zero2prod

./: Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yml
configuration/: local.yaml  production.yaml
migrations/: 20241222120007_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
